# fastpy-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_http_test.py  benchmark_json_test.py  benchmark_regex_search_test.py  benchmark_serialize_json_test.py  benchmark_sha256_test.py  benchmark_token_frequency_test.py  test_benchmark_rust_vs_python.py
docs/: fastpy_rs.html  search.js
docs/fastpy_rs/: json.html
fastpy_rs/: __init__.pyi  ai.pyi  crypto.pyi  datatools.pyi  http.pyi  json.pyi  textutils.pyi
src/: ai.rs  benchmark.rs  crypto.rs  datatools.rs  http.rs  json.rs  lib.rs  textutils.rs
tests/: base64_test.py  benchmark_test.py  crypto_test.py  datatools_test.py  fastpu_rs_test.py  http_test.py  regex_search_test.py  sha256_test.py  token_frequency_test.py
