[package]
name = "fastpy_rs"
version = "0.0.7"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/evgenyigumnov/fastpy-rs"
homepage = "https://github.com/evgenyigumnov/fastpy-rs"
keywords = ["rust","python","pyo3","maturin"]
categories = ["development-tools"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
regex = "1.10.4"
once_cell = "1.21.3"
ahash = "0.8.12"
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"

